<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <GVL Name="GVL_IO" Id="{a5f3292d-798a-4b6c-af88-b59309d83086}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	(* Digital IO to Byte *)
	aDigitalInputIO 	: ARRAY[1..GVL_CONSTANT.NumDigitalInput] OF BOOL; //KL1408 9EA
	aDigitalOutputIO : ARRAY[1..GVL_CONSTANT.NumDigitalOutput] OF BOOL; //KL2408 4EA
	
	(* Analog Input to INT*)
	aAnalogInputIO 	: ARRAY[1..GVL_CONSTANT.NumAnalogInput] OF INT;
	aAnalogOutputIO : ARRAY[1..GVL_CONSTANT.NumAnalogOutput] OF INT;
	
	(*Solenoid Valve*)
	aOutputSolValve 	: ARRAY[1..GVL_CONSTANT.NumSolValve] OF BOOL; //Solenoid Valve
	aAnalogController : ARRAY[1..GVL_CONSTANT.NumAnalogController] OF AnalogController;
	
	(* Present Value Meter Display*)
	aMonitoring_PV 			: ARRAY[1..GVL_CONSTANT.NumMonitoring] OF REAL; //Gauge Monitoring Value to UI
	
	aInputState				: ARRAY[1..GVL_CONSTANT.NumInputState] OF BYTE; // Digital Input from Device (Switch)
	aOutputCmd				: ARRAY[1..GVL_CONSTANT.NumOutputCmd] OF BYTE; // Digital Command from UI
	aInterlock				: ARRAY[1..GVL_CONSTANT.NumInterlock] OF BOOL; // Interlock
	aInterlockSet			: ARRAY[1..GVL_CONSTANT.NumInterlockSet] OF REAL; // UI Interlokc Setting Value
	aInterlockEnable		: ARRAY[1..GVL_CONSTANT.NumInterlockEnable] OF BOOL; // UI Interlock Enable Setting
	
	Interlock_Return_Message :T_MaxString;  (*plc에서 특정 Trig를 True로 바꾸면 UI에서는 이 메시지를 Popup ??   *)
	ControlDevice :ST_MAIN_MODULE;
	
	recipe :Recipe;
	
	controlModeCmd : E_ControlMode := E_ControlMode.Manual;
	controlMode	: E_ControlMode := controlModeCmd;
	
// 	nCaseSignalTower		: INT;
// 	nDorOperationError		: INT;
// 	bDorState				: BOOL;
// 	bDorOnEnable			: BOOL;
// // 	bE3508_HeaterOn			: BOOL;
// 	wE3508_CV				: WORD;
// 	wE3508_PV				: WORD;
// 	wIqPlus_CV				: WORD;
// 	wIqPlus_CDG1_PV			: WORD;
// 	wIqPlus_CDG2_PV			: WORD;
// 	nRotation_Converted_PV	: REAL;
// 	rRotation_ControlValue	: REAL;
// 	nIQPLUS_SetType 		: INT;
// 	nIQPLUS_Mode			: INT;
// 	aLineHeater_rTemperaturePV : ARRAY[1..8]OF REAL;
// 	nE3508_nInputManAutoBytes : USINT;
// 	isCoverClosed 			: BOOL;
// 	isPumpRunning 			: BOOL;
// 	
// 	UI_INTERLOCK_CHECK_RECIPE_ENABLE:WORD;(**)
// 	UI_INTERLOCK_CHECK_OPEN_REACTOR:WORD;(**)
	
	aMaxValueController: INT;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>