<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="F_Variable_ToUI_InputState" Id="{ce868db6-6f39-41e0-a65d-161125454884}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_Variable_ToUI_InputState: BOOL

VAR
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* UI Right Dashboard Variable*)
GVL_IO.aInputState[1].0 := GVL_IO_REACTOR_CABINET.DI_01_MaintenanceModeKey; //Maintenance Key
GVL_IO.aInputState[1].1	:= GVL_IO_REACTOR_CABINET.DO_06_ReactorCabinetLamp; //Reactor Cabinet Lamp
GVL_IO.aInputState[1].2	:= GVL_IO_GAS_CABINET.DO_07_GasCabinetLamp; // Gas Cabinet Lamp
GVL_IO.aInputState[1].3	:= GVL_IO_GAS_CABINET.DI_01_PneumaticPressureSensor; // Power Cabinet Lamp
GVL_IO.aInputState[1].4 := GVL_IO_REACTOR_CABINET.DI_02_C_WFlowSensor; //CDA Alarm Switch
GVL_IO.aInputState[1].5	:=GVL_IO_REACTOR_CABINET.DO_05_SusceptorRotationFWD;

GVL_IO.aInputState[1].6 :=GVL_IO_REACTOR_CABINET.DO_05_SusceptorRotationSTOP; 
GVL_IO.aInputState[1].7 :=NOT GVL_IO_REACTOR_CABINET.DI_02_SusceptorRotationMotorFault; //Susceptor Rotation Motor
GVL_IO.aInputState[1].8 := GVL_IO_REACTOR_CABINET.DI_02_VacuumPumpFail; //Vacuum Pump
GVL_IO.aInputState[1].9 := GVL_IO_REACTOR_CABINET.DI_02_VacuumPumpWarning; //Vacuum Pump
GVL_IO.aInputState[1].10 := GVL_IO_REACTOR_CABINET.DI_02_VacuumPumpAlarm; //Vacuum Pump
GVL_IO.aInputState[1].11 := GVL_IO_REACTOR_CABINET.DI_02_VacuumPumpFBRunning; //Vacuum Pump
GVL_IO.aInputState[1].12 := GVL_IO_REACTOR_CABINET.DI_02_VacuumPumpFBRunning; //Vacuum Pump

GVL_IO.aInputState[1].13 := GVL_IO_REACTOR_CABINET.DI_03_ReactorCabinetDoorClose;
GVL_IO.aInputState[1].14 := GVL_IO_GAS_CABINET.DI_01_GasCabinetDoorClose;
GVL_IO.aInputState[1].15 := GVL_IO_GAS_CABINET.DI_01_ControlCabinetDoorClose;

GVL_IO.aInputState[2].0	:= GVL_IO_GAS_CABINET.DI_01_ResetButton;
GVL_IO.aInputState[2].1	:= GVL_IO_REACTOR_CABINET.DI_02_ReactorDoorUpLimitSensor;
GVL_IO.aInputState[2].2	:= GVL_IO_REACTOR_CABINET.DI_03_ReactorDoorDownLimitSensor;
GVL_IO.aInputState[2].3	:= GVL_IO_REACTOR_CABINET.DI_03_CylinderAutoSwitch_Closed;
GVL_IO.aInputState[2].4	:= GVL_IO_REACTOR_CABINET.DI_03_CylinderAutoSwitch_Opened;
GVL_IO.aInputState[2].5	:= NOT GVL_IO_GAS_CABINET.DI_01_SMPS_1Alarm;
GVL_IO.aInputState[2].6	:= NOT GVL_IO_GAS_CABINET.DI_01_SMPS_2Alarm;
GVL_IO.aInputState[2].7	:= NOT GVL_IO_GAS_CABINET.DI_01_SMPS_3Alarm;
GVL_IO.aInputState[2].8	:= NOT GVL_IO_GAS_CABINET.DI_02_SMPS_4Alarm;
GVL_IO.aInputState[2].9	:= GVL_IO_GAS_CABINET.DI_02_GraphiteHeaterELCB;
GVL_IO.aInputState[2].10:= GVL_IO_GAS_CABINET.DI_02_ThermalBathsELCB;
GVL_IO.aInputState[2].11:= GVL_IO_GAS_CABINET.DI_02_VacuumPumpELCB;
GVL_IO.aInputState[2].12:= GVL_IO_GAS_CABINET.DI_02_LineHeatersELCB;
GVL_IO.aInputState[2].13:= GVL_IO_GAS_CABINET.DI_02_RotationMotorCP;
GVL_IO.aInputState[2].14:= GVL_IO_GAS_CABINET.DI_02_CoverLiftMotorCP;
GVL_IO.aInputState[2].15:= GVL_IO_GAS_CABINET.DI_02_T_VCP;

GVL_IO.aInputState[3].0:= GVL_IO_GAS_CABINET.DI_03_GasDetectorCP;
GVL_IO.aInputState[3].1:= GVL_IO_GAS_CABINET.DI_03_CabinetLampsCP;
GVL_IO.aInputState[3].2:= GVL_IO_GAS_CABINET.DI_03_MFCPowerCP;
GVL_IO.aInputState[3].3:= GVL_IO_GAS_CABINET.DI_03_LineHeater_1CP;
GVL_IO.aInputState[3].4:= GVL_IO_GAS_CABINET.DI_03_LineHeater_2CP;
GVL_IO.aInputState[3].5:= GVL_IO_GAS_CABINET.DI_03_LineHeater_3CP;
GVL_IO.aInputState[3].6:= GVL_IO_GAS_CABINET.DI_03_LineHeater_4CP;
GVL_IO.aInputState[3].7:= GVL_IO_GAS_CABINET.DI_03_LineHeater_5CP;
GVL_IO.aInputState[3].8:= GVL_IO_GAS_CABINET.DI_04_LineHeater_6CP;
GVL_IO.aInputState[3].9:= GVL_IO_GAS_CABINET.DI_04_LineHeater_7CP;
GVL_IO.aInputState[3].10:= GVL_IO_GAS_CABINET.DI_04_LineHeater_8CP;

GVL_IO.aInputState[3].11:= GVL_IO_GAS_CABINET.DI_04_GasDetectorH2;
GVL_IO.aInputState[3].12:= GVL_IO_GAS_CABINET.DI_04_GasDetectorH2S;
GVL_IO.aInputState[3].13:= GVL_IO_GAS_CABINET.DI_04_GasDetectorH2Se;
GVL_IO.aInputState[3].14:= GVL_IO_GAS_CABINET.DI_04_FireSensor;
GVL_IO.aInputState[3].15 := GVL_IO_GAS_CABINET.DI_04_ExternalScrubberFault;

GVL_IO.aInputState[4].0 := GVL_IO_GAS_CABINET.DI_05_ExternalH2GasCabinetFault;
GVL_IO.aInputState[4].1 := GVL_IO_GAS_CABINET.DI_05_ExternalH2SGasCabinetFault;
GVL_IO.aInputState[4].2 := GVL_IO_GAS_CABINET.DI_05_ExternalH2SeGasCabinetFault;
GVL_IO.aInputState[4].3 := GVL_IO_GAS_CABINET.DI_05_ExternalUserInputAlarm;

GVL_IO.aInputState[4].4:= GVL_IO_GAS_CABINET.DI_05_ThermalBath_1DeviationAlarm;
GVL_IO.aInputState[4].5:= GVL_IO_GAS_CABINET.DI_05_ThermalBath_1CutOffAlarm;
GVL_IO.aInputState[4].6:= GVL_IO_GAS_CABINET.DI_05_ThermalBath_2DeviationAlarm;
GVL_IO.aInputState[4].7:= GVL_IO_GAS_CABINET.DI_05_ThermalBath_2CutOffAlarm;
GVL_IO.aInputState[4].8:= GVL_IO_GAS_CABINET.DI_06_ThermalBath_3DeviationAlarm;
GVL_IO.aInputState[4].9:= GVL_IO_GAS_CABINET.DI_06_ThermalBath_3CutOffAlarm;
GVL_IO.aInputState[4].10:= GVL_IO_GAS_CABINET.DI_06_ThermalBath_4DeviationAlarm;
GVL_IO.aInputState[4].11:= GVL_IO_GAS_CABINET.DI_06_ThermalBath_3CutOffAlarm;


GVL_IO.aInputState[5].0:= GVL_IO_REACTOR_CABINET.DO_04_SignalTowerRed;
GVL_IO.aInputState[5].1:= GVL_IO_REACTOR_CABINET.DO_04_SignalTowerOrange;
GVL_IO.aInputState[5].2:= GVL_IO_REACTOR_CABINET.DO_04_SignalTowerGreen;
GVL_IO.aInputState[5].3:= GVL_IO_REACTOR_CABINET.DO_04_SignalTowerBlue;
GVL_IO.aInputState[5].4:= GVL_IO_REACTOR_CABINET.DO_04_SignalTowerWhite;
GVL_IO.aInputState[5].5:= GVL_IO_REACTOR_CABINET.DO_04_SignalTowerBuzzer;

GVL_IO.aInputState[5].6:= GVL_IO_REACTOR_CABINET.DI_01_ClampLock;
GVL_IO.aInputState[5].7:= GVL_IO_REACTOR_CABINET.DI_01_ClampRelease;

GVL_IO.aInputState[5].8:= F_GetDorPressure(GVL_IO_REACTOR_CABINET.AI_07_S05_DORPressurePV) < 100;
GVL_IO.aInputState[5].9:= GVL_DEVICE_NET_E3508.aInputAlarmStatus[1] > 0 OR GVL_DEVICE_NET_E3508.aInputAlarmStatus[2] > 0 ;
GVL_IO.aInputState[5].10:= GVL_DEVICE_NET_E3508.aInputManAutoBytes[1].0;//(*True:manual   False:auto*)

GVL_IO.aInputState[6].0:= GVL_DEVICE_NET_IQ_PLUS.nInputStatus  = 0;
GVL_IO.aInputState[6].1:= GVL_DEVICE_NET_IQ_PLUS.nInputStatus  = 1;
GVL_IO.aInputState[6].2:= GVL_DEVICE_NET_IQ_PLUS.nInputStatus  = 2;
GVL_IO.aInputState[6].3:= GVL_DEVICE_NET_IQ_PLUS.nInputStatus  = 3;
GVL_IO.aInputState[6].4:= GVL_DEVICE_NET_IQ_PLUS.nInputStatus  = 4;
GVL_IO.aInputState[6].5:= GVL_DEVICE_NET_IQ_PLUS.nInputStatus  = 5;
GVL_IO.aInputState[6].6:= GVL_DEVICE_NET_IQ_PLUS.nInputStatus  = 6;
GVL_IO.aInputState[6].7:= GVL_DEVICE_NET_IQ_PLUS.nInputStatus  = 7;
GVL_IO.aInputState[6].8:= GVL_DEVICE_NET_IQ_PLUS.nInputStatus  = 8;

GVL_IO.aInputState[6].9:= P90_Interlock.bRecipeStartAvailable;
GVL_IO.aInputState[6].10:= P90_Interlock.bReactorOpenEnable;
GVL_IO.aInputState[6].12:= GVL_IO_REACTOR_CABINET.DI_03_ReactorDoorDownLimitSensor AND P90_Interlock.AlarmTrig = FALSE AND GVL_IO_VALVE.DO_00_V21PumpByPass = FALSE; 



 
 







]]></ST>
    </Implementation>
    <LineIds Name="F_Variable_ToUI_InputState">
      <LineId Id="513" Count="6" />
      <LineId Id="623" Count="0" />
      <LineId Id="520" Count="100" />
      <LineId Id="82" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>